added use of mp embeddings

--- a/flame_final/landmark_fitting.ipynb
+++ b/flame_final/landmark_fitting.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "vYHp0QYyCTB-"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {
         "id": "wEbcp5MoCQ0r"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {
         "id": "0WMhXZCqCOB5"
       },
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 17,
       "metadata": {
         "id": "lnO5-mO-3NeE"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "metadata": {
         "id": "imCYk8hf2cvc"
       },
@@ -168,7 +168,10 @@
         "    \n",
         "    image_basename = os.path.splitext(os.path.basename(target_img_path))[0]\n",
         "    model_basename = os.path.splitext(os.path.basename(model_fname))[0]\n",
-        "    num_lmk = str(len(lmk_face_idx))\n",
+        "    if len(lmk_face_idx) == 105:\n",
+        "        num_lmk = \"mp\"\n",
+        "    else:\n",
+        "        num_lmk = str(len(lmk_face_idx))\n",
         "    basename = image_basename + \"_\" + model_basename + \"_\" + num_lmk\n",
         "    basepath = os.path.join(out_path, basename)\n",
         "    \n",
@@ -184,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -193,18 +196,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
         "model_fname = \"./generic_model.pkl\"\n",
-        "target_img_path = \"./data/imgHQ01148.jpeg\"\n",
-        "target_lmk_path = \"./data/imgHQ01148_lmks_68.npy\""
+        "target_img_path = \"./data/tired_small.jpg\"\n",
+        "target_lmk_path = \"./data/tired_small_lmks_mp.npy\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -214,20 +217,20 @@
             "Optimize rigid transformation\n",
             "INFO:tensorflow:Optimization terminated with:\n",
             "  Message: b'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-            "  Objective function value: 0.027159\n",
-            "  Number of iterations: 16\n",
-            "  Number of functions evaluations: 21\n",
+            "  Objective function value: 0.078964\n",
+            "  Number of iterations: 9\n",
+            "  Number of functions evaluations: 13\n",
             "Optimize model parameters\n",
             "INFO:tensorflow:Optimization terminated with:\n",
             "  Message: b'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-            "  Objective function value: 0.010990\n",
-            "  Number of iterations: 151\n",
-            "  Number of functions evaluations: 168\n",
+            "  Objective function value: 0.019711\n",
+            "  Number of iterations: 430\n",
+            "  Number of functions evaluations: 463\n",
             "Fitting done\n",
             "First 10 shape values:\n",
-            "[ 0.56 -0.1   0.2  -0.49  0.07  0.21 -0.34 -0.01  0.05  0.31]\n",
+            "[ 0.49 -0.34 -0.13 -0.32 -0.37  0.14  0.03 -0.24  0.45 -0.23]\n",
             "First 10 expression values:\n",
-            "[ 0.3  -0.04  0.03  0.15  0.22  0.33 -0.11 -0.13 -0.16  0.37]\n"
+            "[-0.88 -0.12  0.29  0.2  -0.26 -0.54 -0.25 -0.23  0.1   0.61]\n"
           ]
         }
       ],
@@ -236,6 +239,8 @@
         "    flame_lmk_path = \"./flame_static_embedding.pkl\"\n",
         "elif target_lmk_path[-6:-4] == \"68\":\n",
         "    flame_lmk_path = \"./flame_static_embedding_68.pkl\"\n",
+        "elif target_lmk_path[-6:-4] == \"mp\":\n",
+        "    flame_lmk_path = \"./mediapipe_landmark_embedding.pkl\"\n",
         "else:\n",
         "    flame_lmk_path = \"./flame_static_embedding.pkl\"\n",
         "run_2d_lmk_fitting(model_fname, flame_lmk_path, target_img_path, target_lmk_path, out_path)"
